# vsomeip-workshop

./: README.md
bullet-example/client/: CMakeLists.txt  client.cpp  start.sh
bullet-example/client/config/: vsomeip.json
bullet-example/server/: CMakeLists.txt  server  server.cpp  start.sh
bullet-example/server/config/: vsomeip.json
